# SIP-RTP-Analyzer

./: .gitignore  Abrir_SIP_RTP_GUI_V2.bat  HANDOFF_SIP_RTP_ANALYZER_V2.md  README.md  SIPRTPAnalyzerV2.spec  build_v2.ps1  siprtp_ai.py
v2/app/: __init__.py  siprtp_v2_benchmark.py  siprtp_v2_cli.py  siprtp_v2_core.py  siprtp_v2_db.py  siprtp_v2_export.py  siprtp_v2_gui.py  siprtp_v2_performance.py  siprtp_v2_report.py  siprtp_v2_tk_runtime.py
v2/fast_indexer/: Cargo.toml
v2/fast_indexer/src/: aggregator.rs  db_writer.rs  main.rs  pcap_reader.rs  sip_parser.rs  types.rs
v2/tests/: test_v2_benchmark.py  test_v2_core.py  test_v2_db.py  test_v2_diagnostics.py  test_v2_export.py  test_v2_performance.py  test_v2_report.py
